[package]
name = "solana-rpc-get-stake-activation"
version = "0.1.0"
documentation = "https://docs.rs/solana-rpc-get-stake-activation"
authors = ["Solana Develop Maintainers <maintainers@solana.org>"]
repository = "https://github.com/solana-developers/solana-rpc-get-stake-activation"
homepage = "https://solana.com/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = "1"
solana-rpc-client = "2.0.3"
solana-rpc-client-api = "2.0.3"
solana-sdk = "2.0.3"

[[example]]
name = "rpc"
